--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="description" content="Desenvolvedor
   Front End e UX/UI Designer Localizado no Rio de Janeiro">
   <link rel="stylesheet" href="css/style.min.css">
+  <link rel="icon" href="img/detalhe.svg" type="image/svg">
 </head>
 <body>
   <header class="header">
