--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   Front End e UX/UI Designer Localizado no Rio de Janeiro">
   <link rel="stylesheet" href="css/style.min.css">
   <link rel="icon" href="img/detalhe.svg" type="image/svg">
+  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="header">
